# esoteric-vm

./: Cargo.toml  README.md
examples/: 99_bottles_of_beer.rs  helloworld.rs  truth_machine.rs
src/: assembly.rs  instruction.rs  lib.rs
src/machine/: mod.rs  omega.rs
src/machine/stack/: mod.rs  stackoverflow.rs
src/utils/: array_debug.rs  constant_size_string.rs  multi_index.rs  non_invalidatable.rs  primes.rs
